[Basic Math Gaps] Fixed issue with check and reset #4758

--- a/addons/Basic_Math_Gaps/src/style.css
+++ b/addons/Basic_Math_Gaps/src/style.css
@@ -66,3 +66,7 @@
 .basic-math-gaps-wrapper .basic-math-gaps-container.correct {
     border: 1px solid #00bb00;
 }
+
+.basic-math-gaps-wrapper .gap-object {
+    height: 20px;
+}
